fixed background image not showing

--- a/Assets/CSS/style.css
+++ b/Assets/CSS/style.css
@@ -14,6 +14,7 @@ header {
     align-items: center;
     background-color: rgb(247, 65, 95);
     color: #fff;
+    margin: 1%;
     }
 
 /* set styling for h1 */
@@ -27,7 +28,6 @@ h1 {
 h2 {
     margin: 3%;
     font-size: 200%;
-    );
 }
 /* Move nav away from right margin */
 nav {
@@ -47,16 +47,16 @@ nav a {
     color:bisque;
     text-decoration: none;
 }
-
+/* background and cool subtitle */
  header1 {
      display: flex;
      justify-content:end;
-     /* min-width: 330px; */
-     background-image: url(/assets/images/header_background.png);
+     background-image: url("../images/header_background.png");
      background-repeat: no-repeat;
      background-size: 100%;
      padding-top: 5%;
       } 
+/* formatting for background image text     */
 header1 h2 {
     background-color: rgb(247, 65, 95);
     color: bisque;
